# Audio_Classification_Model

./: .env  .gitattributes  .gitignore  IDEA.md  MODEL_BUILDING_GUIDE.md  README.md  app.py  main.py  norm_stats.npy  pyproject.toml  requirements.txt
audio_model/: classifier.py  forest_sound_model_v2.h5  norm_stats.npy
image_model/: __init__.py  analyzer.py
