[project]
name = "audio-classification-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.66.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "tensorflow-cpu>=2.21.0",
    "tqdm>=4.67.3",
]
